# sqlite-rs-embedded

./: .gitmodules  Cargo.toml  README.md
examples-js/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wa-sqlite
examples-js/browser/: index.html  package.json
examples-js/browser/src/: main.ts  tag.js
examples/nostd_extension/: Cargo.toml  README.md
examples/nostd_extension/src/: lib.rs
examples/std_extension/: Cargo.toml
examples/std_extension/src/: lib.rs
sqlite3_allocator/: Cargo.toml
sqlite3_allocator/examples/: global_alloc.rs
sqlite3_allocator/src/: lib.rs
sqlite3_capi/: Cargo.toml  build.rs
sqlite3_capi/src/: capi.rs  lib.rs
sqlite_browser/: Cargo.toml
sqlite_browser/src/: lib.rs
sqlite_nostd/: Cargo.toml
sqlite_nostd/src/: lib.rs  nostd.rs
sqlite_web/: Cargo.toml
sqlite_web/src/: lib.rs  web.rs
src/: lib.rs
