[package]
name = "sqlite_nostd"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wonlaw"]
description = "Minimal bindings for SQLite3 that do not require std"
keywords = ["sqlite"]
license = "MIT"

[lib]
name = "sqlite_nostd"
crate-type = ["rlib"]

[dependencies]
sqlite3_capi = { path="./sqlite3_capi"}

