[package]
name = "nostd_extension"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wonlaw"]
keywords = ["sqlite"]
license = "MIT"

[lib]
name = "nostd_extension"
crate-type = ["cdylib"]

[dependencies]
sqlite_nostd = { path="../../"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "wasm32-unknown-unknown"