[package]
name = "nostd_extension"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wonlaw"]
keywords = ["sqlite"]
license = "MIT"

[lib]
name = "nostd_extension"
crate-type = ["cdylib"]

[target.'cfg(target_family = "wasm")'.dependencies]
sqlite_web = { path="../../sqlite_web"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
sqlite_nostd = { path="../../sqlite_nostd"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "wasm32-unknown-unknown"