[package]
name = "std_extension"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wonlaw"]
description = "Minimal bindings for SQLite3 that do not require std"
keywords = ["sqlite"]
license = "MIT"

[lib]
name = "nostd_extension"
crate-type = ["cdylib"]

[dependencies]
sqlite3_capi = { path="../../sqlite3_capi"}
